hyperdrive (1.2.0) stable; urgency=medium

  * Updated Geth, Nethermind, Besu, Reth, Lighthouse, Lodestar, Nimbus, Prysm, and Teku.
  * Added MEV-Boost support for Hoodi.
  * Enabled the StakeWise module on Mainnet.
  * Reth now preserves all contract event logs (starting at the deposit contract's deployment block) and all transaction lookup info.
  * Added a config parameter to adjust the length of Reth's historical state pruning window.
  * Removed the supermajority warning from Geth.
  * Updated Go to v1.24.

 -- NodeSet Inc. <info@nodeset.io>  Tue, 22 Apr 2025 06:45:30 +0000

hyperdrive (1.2.0~b1) unstable; urgency=medium

  * Updated Geth, Besu, Reth, and the Node Exporter.
  * Added `--full` to Reth so it retains deposit event logs, which is required for StakeWise.
  * Updated Lighthouse for test networks only.
  * Redesigned the StakeWise module to support StakeWise v3 vaults. It will no longer function with legacy StakeWise v1 vaults, but those have been deprecated from nodeset.io anyway.
  * Disabled the StakeWise module on Mainnet, and enabled it on Hoodi.
  * Added validator key recovery to the StakeWise commands.

 -- NodeSet Inc. <info@nodeset.io>  Thu, 17 Apr 2025 19:35:09 +0000

hyperdrive (1.1.4) stable; urgency=medium

  * Updated Geth, Besu, Nethermind, Reth, Lodestar, Nimbus, Prysm, Teku, and the Node Exporter.
  * Updated Lighthouse for test networks only.
  * Added support for the new Hoodi testnet.

 -- NodeSet Inc. <info@nodeset.io>  Tue, 25 Mar 2025 18:33:24 +0000

hyperdrive (1.1.3) stable; urgency=medium

  * Updated Geth, Besu, Nethermind, Reth, Lodestar, Nimbus, Prysm, Teku to prepare for Pectra on Holesky.
  * Holesky only: updated Lighthouse and MEV-Boost to pre-release versions.

 -- NodeSet Inc. <info@nodeset.io>  Fri, 21 Feb 2025 18:59:41 +0000

hyperdrive (1.1.2) stable; urgency=high

  * Updated Geth, Besu, Nethermind, Reth, Lighthouse, Lodestar, Nimbus, Prysm, Teku, and Prometheus.