@@ -15,6 +15,11 @@ networkResources:
   capellaForkVersion: 0x40000910
   capellaForkEpoch: 0
 defaultConfigSettings:
+  localExecution:
+    nethermind:
+      containerTag: "nethermind/nethermind:1.31.9"
+  mevBoost:
+    containerTag: "flashbots/mev-boost:1.9"
 hyperdriveResources:
   nodeSetApiUrl: https://nodeset.io/api
   encryptionPubkey: age1hs87f8pl369tel4xpprtmaxwhg2e3gynvz8q45h48hed4m4h4d0s6t8caa
